--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="text-center">SEN</h1>
             <div class="healthbar">
                 <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
+                    
                 </div>
             </div>
         </div>
@@ -26,20 +26,20 @@
             </div>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls"  v-if="!game_is_on">
         <div class="small-12 columns">
-            <button id="start-game">YENİ OYUN</button>
+            <button id="start-game" @click="start_game">YENİ OYUN</button>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls"  v-if="game_is_on">
         <div class="small-12 columns">
-            <button id="attack">SALDIRI</button>
-            <button id="special-attack">ÖZEL SALDIRI</button>
-            <button id="heal">İLK YARDIM</button>
-            <button id="give-up">PES ET!</button>
+            <button id="attack" @click="attack">SALDIRI</button>
+            <button id="special-attack" @click="special_attack">ÖZEL SALDIRI</button>
+            <button id="heal" @click="heal_up">İLK YARDIM</button>
+            <button id="give-up" @click="give_up">PES ET!</button>
         </div>
     </section>
-    <section class="row log">
+    <section class="row log"  v-if="game_is_on">
         <div class="small-12 columns">
             <ul>
                 <li>
@@ -48,6 +48,7 @@
             </ul>
         </div>
     </section>
+    <script src="/app.js"></script>
 </div>
 </body>
 </html>
