--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section class="row">
         <div class="small-6 columns">
             <h1 class="text-center">SEN</h1>
-            <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
+            <div class="healthbar" >
+                <div :style={width:player_heal+"%"} class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
                     {{player_heal}}
                 </div>
             </div>
@@ -20,7 +20,7 @@
         <div class="small-6 columns">
             <h1 class="text-center">CANAVAR</h1>
             <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
+                <div :style={width:monster_heal+"%"} class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
                     {{monster_heal}}
                 </div>
             </div>
