--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     </section>
     <section class="row log"  v-if="game_is_on">
         <div class="small-12 columns">
-            <ul>
-                <li>
-
+            <ul >
+                <li :class="{'player-turn':log.side=='p','monster-turn':log.side=='m'}" 
+                    v-for="log in logs">
+                    {{log.text}}
                 </li>
             </ul>
         </div>
